# rustfriday-wordle

./: Cargo.toml  README.md
src/: board.rs  dictionary.rs  lib.rs  main.rs  slack.rs  traits.rs  utils.rs
www/: index.js  package-lock.json  package.json
