[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.httpserver]
path = "../httpserver"

[dependencies]
crossterm = "0.23"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde_json = "1.0.81"
lazy_static = "1.4.0"
