[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lazy_static = "1.4.0"
crossterm = "0.23"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde_json = "1.0.81"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.httpserver]
path = "../httpserver"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
